# ldd_simple_daemon

./: CMakeLists.txt  README.md
inc/: daemon.h
src/: daemon.cpp  main.cpp
